--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@types/node": "^16.18.97",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.6.8",
+    "axios-cache-interceptor": "^1.5.2",
+    "pokenode-ts": "^1.20.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.77.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
