--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pokenode-ts": "^1.20.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-scripts": "5.0.1",
     "sass": "^1.77.2",
     "typescript": "^4.9.5",
